Fix Carosuel alignment with their card.

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,10 +1,10 @@
 .image{
-  margin-left: 38%;
+  margin-left: 35%;
   margin-top: 74px;
 }
 
 .relocate-image{
-  margin-left: 32%;
+  margin-left: 27%;
   margin-top: 74px;
 }
 
